[metadata]
name = peacock-trame
version = 0.1.2
description = MOOSE GUI developed using Trame from Kitware Inc.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Elim Schenck
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    trame-vuetify
    trame-vtk
    trame-xterm
    trame-simput
    pyaml
    numpy # come with ParaView

[options.entry_points]
console_scripts =
    peacock-trame = peacock_trame.app:main
jupyter_serverproxy_servers =
    peacock-trame = peacock_trame.app.jupyter:jupyter_proxy_info

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
